# progettofinaleldp

./: Box.cpp  Box.h  CMakeLists.txt  Dadi.cpp  Dadi.h  Partita.cpp  Partita.h  Partita_con_umano.txt  Partita_tra_computer.txt  Player.cpp  Player.h  README.txt  Scoreboard.cpp  Scoreboard.h
include/: Board.h  BoardExceptions.h  Dadi.h  Partita.h
src/: Board.cpp  Box.cpp  Dadi.cpp  Partita.cpp  Player.cpp  main.cpp
